# Jack-Audio-For-Unity

./: .gitignore  JackAudioForUnity.unitypackage  LICENSE  README.md  UnityJack.unitypackage
.github/workflows/: build.yaml  release.yaml  tagged-release.yaml
JackForUnity/: CMakeLists.txt  InternalJackClient.h  JackForUnity.cpp  JackForUnity.vcxproj  JackForUnity.vcxproj.filters  PluginList.h  Plugin_TestShared.cpp  TestSharedLib.cpp  UnityNativeAudio.cpp  UnityNativeAudio.h  jackclient.h  stdafx.cpp  stdafx.h
JackForUnity/VisualStudio/: AudioPluginDemo.vcxproj  JackForUnity.vcxproj  JackForUnity.vcxproj.filters
JackForUnity/Xcode/AudioPluginDemo.xcodeproj/: project.pbxproj
JackForUnity/cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
UnityJack/: CMakeLists.txt  InternalJackClient.h  Jack.h  JackClient.h  Logger.h  Plugin.cpp  PluginList.h  Plugin_TestShared.cpp  Stream.h  TestSharedLib.cpp
UnityJack/VisualStudio/: AudioPluginDemo.vcxproj
UnityJack/Xcode/AudioPluginDemo.xcodeproj/: project.pbxproj
UnityJack/Xcode/JackAudioForUnity.xcodeproj/: project.pbxproj
UnityJack/cmake-modules/: FindJACK.cmake  FindJack.cmake
UnityJack/test/: main.cpp
sample/Assets/: main.mixer  test.mixer
sample/Assets/AudioPluginJack/: JackReceive.cs  JackSend.cs  JackWrapper.cs
sample/Assets/AudioPluginJack/Editor/: JackEditorWIndow.cs
sample/Assets/Samples/JackAudioForUnity/1.1.0/Receive/: Receive.unity
sample/Assets/Samples/JackAudioForUnity/1.1.0/Send/: Send.unity
sample/Assets/Samples/JackAudioForUnity/1.1.0/SendEffect/: main.mixer
sample/Assets/Scenes/: Receive.unity  SampleScene.unity  SendEffect.unity
sample/ProjectSettings/: AudioManager.asset  ProjectSettings.asset
sample_jackscene/: .gitignore
sample_jackscene/Assets/: MAIN.mixer  MAIN_NO_EFFECTS.mixer  TestJack.cs  TestSend.cs
sample_jackscene/Assets/JackAudio/: JackDemuxer.cs  JackMultiplexer.cs  JackSourceReceive.cs  JackSourceSend.cs  JackWrapper.cs  MAIN.mixer  MAIN_NO_EFFECTS.mixer
sample_jackscene/Assets/JackAudio/Editor/: JackEditorWindow.cs
sample_jackscene/Assets/JackAudio/Scenes/: TestReceive.unity  TestSend.unity  TestSendEffect.unity  TestSendReceive.unity  TestSendScript.unity
sample_jackscene/Assets/Plugins/: UnityJackAudio.exp  UnityJackAudio.lib
sample_jackscene/Assets/Plugins/AudioPluginDemo.bundle/Contents/: Info.plist
sample_jackscene/Assets/Plugins/AudioPluginDemo.bundle/Contents/MacOS/: AudioPluginDemo
sample_jackscene/Assets/Plugins/Plugins/JackAudioForUnity.bundle/Contents/: Info.plist
sample_jackscene/Assets/Plugins/Plugins/JackAudioForUnity.bundle/Contents/MacOS/: JackAudioForUnity
sample_jackscene/Assets/Scenes/: TestJack.unity  TestReceive.unity  TestReceiveEffect.unity  TestSend.unity  TestSendReceive.unity
sample_jackscene/ProjectSettings/: AudioManager.asset  ProjectSettings.asset
